--- a/about/index.html
+++ b/about/index.html
@@ -19,10 +19,10 @@
       <nav>
         <ul class="nav-link mb-tab-none">
           <a href="#">
-            <li class="link active">Home</li>
+            <li class="link">Home</li>
           </a>
           <a href="./about">
-            <li class="link">About</li>
+            <li class="link active">About</li>
           </a>
           <a href="./service">
             <li class="link">Services</li>
@@ -77,6 +77,59 @@
       </div>
     </div>
 
-    <h1>About Us</h1>
+    <section class="main-cta">
+      <h1>About Us</h1>
+      <a href="./contact" class="btn-link-wine">Contact</a>
+    </section>
+
+    <div class="about-company">
+      <h3>Company</h3>
+      <p>
+        Tech-lot is a new IT firm with operation both Nigeria and the USA. The
+        firm was founded in 2015 a Nigerian-American Information Technology
+        expert. The vision of the firm is to foster sharing of IT solutions
+        across the globe and also to be among the most recognized and successful
+        IT firms.
+      </p>
+    </div>
+
+    <script src="../header.js"></script>
+
+    <footer>
+      <div class="company-foot">
+        <div class="company-profile">
+          <div class="logo">
+            <img src="/images/logo.svg" alt="logo" />
+            <h3>Tech-lot</h3>
+          </div>
+
+          <p>
+            The vision of the firm is to foster sharing of IT solutions to the
+            country and also to be the most recognized IT providing high value
+            services to her clients.
+          </p>
+        </div>
+
+        <div class="company-details">
+          <h2>Address</h2>
+          <div class="details">
+            <div class="add-container">
+              <h3>Head Office:</h3>
+              <p>Moyosore Complex, Bolade-Oshodi, Lagos, Nigeria</p>
+            </div>
+            <div class="add-container">
+              <h3>Email:</h3>
+              <p>care@hamtechitsolution.com</p>
+            </div>
+            <div class="add-container">
+              <h3>Telephone:</h3>
+              <p>+2349059084617, +1(555)9187542, +2347063283851</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="foot">© Copyright <b>Tech-lot</b> 2023</div>
+    </footer>
   </body>
 </html>
