--- a/index.html
+++ b/index.html
@@ -335,6 +335,7 @@
     </footer>
 
     <script src="./script.js"></script>
+    <script src="./header.js"></script>
 
     <script type="module">
       // Import the functions you need from the SDKs you need
