working on the about page

--- a/about/index.html
+++ b/about/index.html
@@ -83,14 +83,33 @@
     </section>
 
     <div class="about-company">
-      <h3>Company</h3>
-      <p>
-        Tech-lot is a new IT firm with operation both Nigeria and the USA. The
-        firm was founded in 2015 a Nigerian-American Information Technology
-        expert. The vision of the firm is to foster sharing of IT solutions
-        across the globe and also to be among the most recognized and successful
-        IT firms.
-      </p>
+      <div class="about-text">
+        <h3>Company</h3>
+        <p>
+          Tech-lot is a new IT firm with operation both Nigeria and the USA. The
+          firm was founded in 2015 a Nigerian-American Information Technology
+          expert. The vision of the firm is to foster sharing of IT solutions
+          across the globe and also to be among the most recognized and
+          successful IT firms.
+        </p>
+      </div>
+
+      <div class="list-review">
+        <div class="reviews">
+          <div class="review">
+            <h1><span class="clients">80</span><sup>+</sup></h1>
+            <p>Happy Client</p>
+          </div>
+          <div class="review">
+            <h1><span class="projects">1.3K</span><sup>+</sup></h1>
+            <p>Project Completed</p>
+          </div>
+          <div class="review">
+            <h1><span class="staffs">12</span></h1>
+            <p>Profession Staffs</p>
+          </div>
+        </div>
+      </div>
     </div>
 
     <script src="../header.js"></script>
