--- a/about/index.html
+++ b/about/index.html
@@ -18,16 +18,16 @@
 
       <nav>
         <ul class="nav-link mb-tab-none">
-          <a href="#">
+          <a href="../">
             <li class="link">Home</li>
           </a>
-          <a href="./about">
+          <a href="#">
             <li class="link active">About</li>
           </a>
-          <a href="./service">
+          <a href="../service">
             <li class="link">Services</li>
           </a>
-          <a href="./contact">
+          <a href="../contact">
             <li class="link">Contact</li>
           </a>
         </ul>
@@ -51,16 +51,16 @@
     </header>
     <div class="mobile-menu">
       <ul class="nav-link-mobile">
+        <a href="../">
+          <li class="link-mobile">Home</li>
+        </a>
         <a href="#">
-          <li class="link-mobile active">Home</li>
+          <li class="link-mobile active">About</li>
         </a>
-        <a href="#about">
-          <li class="link-mobile">About</li>
-        </a>
-        <a href="#service">
+        <a href="../service">
           <li class="link-mobile">Services</li>
         </a>
-        <a href="#contact">
+        <a href="../contact">
           <li class="link-mobile">Contact</li>
         </a>
       </ul>
@@ -112,7 +112,42 @@
       </div>
     </div>
 
+    <div class="mission-vision">
+      <div class="indicators">
+        <div class="circle-indicator indicator1"></div>
+        <div class="circle-indicator indicator2"></div>
+      </div>
+
+      <div class="mission">
+        <div class="mission-text">
+          <h3>Our Mission</h3>
+          <p>
+            At Tech-Lot IT Solutions, our mission is to Provide innovative and
+            reliable IT solutions to diverse industries, enabling our clients to
+            streamline their operations, increase efficiency, and achieve their
+            business goals.
+          </p>
+        </div>
+        <img src="../images/mission-bg.jpg" alt="our-mission" />
+      </div>
+
+      <div class="vision">
+        <div class="vision-text">
+          <h3>Our Vision</h3>
+          <p>
+            Our vision at Tech-Lot IT Solutions is to be the premier provider of
+            IT Solutions, consistently delivering exceptional customer service
+            and cutting-edge technology to help our clients stay ahead of the
+            competition and reach their full potential.
+          </p>
+        </div>
+
+        <img src="../images/vision-paul.jpg" alt="vision-image" />
+      </div>
+    </div>
+
     <script src="../header.js"></script>
+    <script src="./script.js"></script>
 
     <footer>
       <div class="company-foot">
