--- a/contact/index.html
+++ b/contact/index.html
@@ -18,16 +18,16 @@
 
       <nav>
         <ul class="nav-link mb-tab-none">
-          <a href="#">
+          <a href="../">
             <li class="link">Home</li>
           </a>
-          <a href="./about">
+          <a href="../about">
             <li class="link">About</li>
           </a>
-          <a href="./service">
+          <a href="../service">
             <li class="link">Services</li>
           </a>
-          <a href="./contact">
+          <a href="#">
             <li class="link active">Contact</li>
           </a>
         </ul>
@@ -51,16 +51,16 @@
     </header>
     <div class="mobile-menu">
       <ul class="nav-link-mobile">
-        <a href="#">
+        <a href="../">
           <li class="link-mobile">Home</li>
         </a>
-        <a href="#about">
+        <a href="../about">
           <li class="link-mobile">About</li>
         </a>
-        <a href="#service">
+        <a href="../service">
           <li class="link-mobile">Services</li>
         </a>
-        <a href="#contact">
+        <a href="#">
           <li class="link-mobile active">Contact</li>
         </a>
       </ul>
@@ -79,7 +79,7 @@
 
     <section class="main-cta">
       <h1>Contact Us</h1>
-      <a href="./about" class="btn-link-wine">About</a>
+      <a href="../about" class="btn-link-wine">About</a>
     </section>
 
     <div class="about-company">
