--- a/about/index.html
+++ b/about/index.html
@@ -33,13 +33,13 @@
         </ul>
         <button
           style="--outline-color: var(--white-color)"
-          class="outline-button mb-none"
+          class="outline-button mb-tab-none"
         >
           Login
         </button>
         <button
           style="--bg-color: var(--black-color)"
-          class="mb-none primary-button"
+          class="mb-tab-none primary-button"
         >
           Sign up
         </button>
