change the team section layout to scrollable, added contact form to the about section

--- a/about/index.html
+++ b/about/index.html
@@ -27,21 +27,15 @@
           <a href="../service">
             <li class="link">Services</li>
           </a>
-          <a href="../contact">
+          <a href="#contact">
             <li class="link">Contact</li>
           </a>
         </ul>
         <button
-          style="--outline-color: var(--white-color)"
-          class="outline-button mb-tab-none"
-        >
-          Login
-        </button>
-        <button
           style="--bg-color: var(--black-color)"
           class="mb-tab-none primary-button"
         >
-          Sign up
+          Search
         </button>
         <div class="mobile-menu-icon">
           <img class="icon-white" src="/images/menu-icon-1.svg" alt="icon" />
@@ -49,6 +43,7 @@
         </div>
       </nav>
     </header>
+
     <div class="mobile-menu">
       <ul class="nav-link-mobile">
         <a href="../">
@@ -65,14 +60,8 @@
         </a>
       </ul>
       <div class="buttons">
-        <button
-          style="--outline-color: var(--black-color)"
-          class="outline-button"
-        >
-          Login
-        </button>
         <button style="--bg-color: var(--black-color)" class="primary-button">
-          Sign up
+          Search
         </button>
       </div>
     </div>
@@ -128,7 +117,7 @@
             business goals.
           </p>
         </div>
-        <img src="../images/mission-bg.jpg" alt="our-mission" />
+        <img src="../images/mission-bg.jpg" loading="lazy" alt="our-mission" />
       </div>
 
       <div class="vision">
@@ -142,7 +131,11 @@
           </p>
         </div>
 
-        <img src="../images/vision-paul.jpg" alt="vision-image" />
+        <img
+          src="../images/vision-paul.jpg"
+          loading="lazy"
+          alt="vision-image"
+        />
       </div>
     </div>
 
@@ -157,7 +150,7 @@
       <div class="team-list">
         <div class="team">
           <div class="team-img">
-            <img src="../images/persons (3).jpg" alt="CEO" />
+            <img src="../images/persons (3).jpg" loading="lazy" alt="CEO" />
           </div>
           <div class="team-details">
             <h4>Abdullateef Gafar</h4>
@@ -167,7 +160,10 @@
               <a
                 href="https://linkedin.com/in/abdullateef"
                 class="team-linkedin"
-                ><img src="../images/linkedin-2-xxl.png" alt="linkedin"
+                ><img
+                  src="../images/linkedin-2-xxl.png"
+                  loading="lazy"
+                  alt="linkedin"
               /></a>
             </div>
           </div>
@@ -175,7 +171,7 @@
 
         <div class="team">
           <div class="team-img">
-            <img src="../images/persons (6).jpg" alt="CEO" />
+            <img src="../images/persons (6).jpg" loading="lazy" alt="CEO" />
           </div>
           <div class="team-details">
             <h4>Baru Muhammed</h4>
@@ -185,7 +181,10 @@
               <a
                 href="https://linkedin.com/in/abdullateef"
                 class="team-linkedin"
-                ><img src="../images/linkedin-2-xxl.png" alt="linkedin"
+                ><img
+                  src="../images/linkedin-2-xxl.png"
+                  loading="lazy"
+                  alt="linkedin"
               /></a>
             </div>
           </div>
@@ -193,7 +192,7 @@
 
         <div class="team">
           <div class="team-img">
-            <img src="../images/persons (1).jpg" alt="CEO" />
+            <img src="../images/persons (1).jpg" loading="lazy" alt="CEO" />
           </div>
           <div class="team-details">
             <h4>Titi Olaoni</h4>
@@ -203,7 +202,10 @@
               <a
                 href="https://linkedin.com/in/abdullateef"
                 class="team-linkedin"
-                ><img src="../images/linkedin-2-xxl.png" alt="linkedin"
+                ><img
+                  src="../images/linkedin-2-xxl.png"
+                  loading="lazy"
+                  alt="linkedin"
               /></a>
             </div>
           </div>
@@ -211,7 +213,7 @@
 
         <div class="team">
           <div class="team-img">
-            <img src="../images/persons (2).jpg" alt="CEO" />
+            <img src="../images/persons (2).jpg" loading="lazy" alt="CEO" />
           </div>
           <div class="team-details">
             <h4>Momoh Maili</h4>
@@ -221,7 +223,10 @@
               <a
                 href="https://linkedin.com/in/abdullateef"
                 class="team-linkedin"
-                ><img src="../images/linkedin-2-xxl.png" alt="linkedin"
+                ><img
+                  src="../images/linkedin-2-xxl.png"
+                  loading="lazy"
+                  alt="linkedin"
               /></a>
             </div>
           </div>
@@ -229,7 +234,7 @@
 
         <div class="team">
           <div class="team-img">
-            <img src="../images/persons (5).jpg" alt="CEO" />
+            <img src="../images/persons (5).jpg" loading="lazy" alt="CEO" />
           </div>
           <div class="team-details">
             <h4>Kashia Khan</h4>
@@ -239,7 +244,10 @@
               <a
                 href="https://linkedin.com/in/abdullateef"
                 class="team-linkedin"
-                ><img src="../images/linkedin-2-xxl.png" alt="linkedin"
+                ><img
+                  src="../images/linkedin-2-xxl.png"
+                  loading="lazy"
+                  alt="linkedin"
               /></a>
             </div>
           </div>
@@ -247,7 +255,7 @@
 
         <div class="team">
           <div class="team-img">
-            <img src="../images/persons (4).jpg" alt="CEO" />
+            <img src="../images/persons (4).jpg" loading="lazy" alt="CEO" />
           </div>
           <div class="team-details">
             <h4>Ashir Dina</h4>
@@ -257,10 +265,98 @@
               <a
                 href="https://linkedin.com/in/abdullateef"
                 class="team-linkedin"
-                ><img src="../images/linkedin-2-xxl.png" alt="linkedin"
+                ><img
+                  src="../images/linkedin-2-xxl.png"
+                  loading="lazy"
+                  alt="linkedin"
               /></a>
             </div>
           </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="contact" id="contact">
+      <div class="form-container">
+        <div class="bg-image">
+          <h1>Get in Touch with us</h1>
+          <p>where you will find the same quaility of service and dedication</p>
+
+          <form action="https://formspree.io/f/xoqzqlrl" method="post">
+            <div class="custom-select">
+              <select name="services">
+                <option value="">* Select Services</option>
+                <option value="Technology Soloutions">
+                  Technology Solutions
+                </option>
+                <option value="Embedded Expertise">Embedded Expertise</option>
+                <option value="Corporate Training">Corporate Training</option>
+                <option value="Client Experience">Client Experience</option>
+                <option value="">ATM Service</option>
+              </select>
+            </div>
+
+            <div class="float-container">
+              <input
+                type="text"
+                name="name"
+                required
+                id="name"
+                placeholder="Your Name Here"
+              />
+            </div>
+
+            <div class="in-form">
+              <div class="float-container">
+                <input
+                  type="number"
+                  name="Phone Number"
+                  id="phone"
+                  required
+                  placeholder="* Phone Number"
+                />
+              </div>
+
+              <div class="float-container">
+                <input
+                  type="email"
+                  name="Email"
+                  id="email"
+                  placeholder="* Email Address:"
+                  required
+                />
+              </div>
+
+              <div class="float-container">
+                <input
+                  type="text"
+                  name="company"
+                  placeholder="Your Company Name: (ignore if it individual)"
+                  required
+                />
+              </div>
+            </div>
+
+            <div class="float-container">
+              <textarea
+                name="Message"
+                placeholder="* How can we help you"
+                cols="40"
+                rows="11"
+              ></textarea>
+            </div>
+            <div></div>
+
+            <div class="submit">
+              <button
+                type="submit"
+                style="--bg-color: var(--wine-color)"
+                class="primary-button"
+              >
+                SEND REQUEST
+              </button>
+            </div>
+          </form>
         </div>
       </div>
     </div>
@@ -289,7 +385,7 @@
             </div>
             <div class="add-container">
               <h3>Email:</h3>
-              <p>care@hamtechitsolution.com</p>
+              <p>care@tech-lot.com</p>
             </div>
             <div class="add-container">
               <h3>Telephone:</h3>
