--- a/index.html
+++ b/index.html
@@ -40,16 +40,10 @@
           </a>
         </ul>
         <button
-          style="--outline-color: var(--white-color)"
-          class="outline-button mb-none"
-        >
-          Login
-        </button>
-        <button
           style="--bg-color: var(--black-color)"
           class="mb-none primary-button"
         >
-          Sign up
+          Search
         </button>
         <div class="mobile-menu-icon">
           <img class="icon-white" src="/images/menu-icon-1.svg" alt="icon" />
@@ -73,14 +67,8 @@
         </a>
       </ul>
       <div class="buttons">
-        <button
-          style="--outline-color: var(--black-color)"
-          class="outline-button"
-        >
-          Login
-        </button>
         <button style="--bg-color: var(--black-color)" class="primary-button">
-          Sign up
+          Search
         </button>
       </div>
     </div>
@@ -321,7 +309,7 @@
             </div>
             <div class="add-container">
               <h3>Email:</h3>
-              <p>care@hamtechitsolution.com</p>
+              <p>care@tech-lot.com</p>
             </div>
             <div class="add-container">
               <h3>Telephone:</h3>
