--- a/service/index.html
+++ b/service/index.html
@@ -138,7 +138,7 @@
             </div>
             <div class="add-container">
               <h3>Email:</h3>
-              <p>care@hamtechitsolution.com</p>
+              <p>care@tech-lot.com</p>
             </div>
             <div class="add-container">
               <h3>Telephone:</h3>
