--- a/about/index.html
+++ b/about/index.html
@@ -395,9 +395,11 @@
         </div>
       </div>
 
-      <div class="foot">© Copyright <b>Tech-lot</b> 2023</div>
+      <div class="foot">© Copyright <b>Tech-lot</b> - <span class="copyright-year">2021</span></div>
     </footer>
   </body>
-  <script src="../header.js"></script>
+  <script src="../scripts/header.js"></script>
+  <script src="..//scripts/contact.js"></script>
+  <script src="..//scripts/footer.js"></script>
   <script src="./script.js"></script>
 </html>
