--- a/index.html
+++ b/index.html
@@ -319,11 +319,15 @@
         </div>
       </div>
 
-      <div class="foot">© Copyright <b>Tech-lot</b> 2023</div>
+      <div class="foot">
+        © Copyright <b>Tech-lot</b> - <span class="copyright-year">2021</span>
+      </div>
     </footer>
 
     <script src="./script.js"></script>
-    <script src="./header.js"></script>
+    <script src="./scripts/header.js"></script>
+    <script src="./scripts/contact.js"></script>
+    <script src="./scripts/footer.js"></script>
 
     <script type="module">
       // Import the functions you need from the SDKs you need
