--- a/about/index.html
+++ b/about/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-      <a href="#">
+      <a href="../">
         <div class="logo">
           <img src="/images/logo.svg" alt="logo" />
           <h3>Tech-lot</h3>
@@ -395,7 +395,9 @@
         </div>
       </div>
 
-      <div class="foot">© Copyright <b>Tech-lot</b> - <span class="copyright-year">2021</span></div>
+      <div class="foot">
+        © Copyright <b>Tech-lot</b> - <span class="copyright-year">2021</span>
+      </div>
     </footer>
   </body>
   <script src="../scripts/header.js"></script>
