message me later

--- a/service/index.html
+++ b/service/index.html
@@ -80,6 +80,88 @@
         <input type="text" placeholder="Search" />
         <img src="../images/search-icon.svg" alt="search-icon" />
       </form> -->
+      <div class="service-list" id="technology-solutions">
+        <h1>Technology Solutions</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut molestias
+          incidunt, modi ipsa quaerat ea sed magni aspernatur recusandae? Dolor,
+          perspiciatis suscipit! Sit, in consequuntur! Harum dolor nobis ea
+          numquam.
+        </p>
+
+        <div class="sub-services">
+          <div class="serv">
+            <div class="serv-img">
+              <img
+                src="../images/aron-visuals-bZZp1PmHI0E-unsplash.jpg"
+                loading="lazy"
+                alt="CEO"
+              />
+            </div>
+            <div class="serv-details">
+              <span class="serv-view-type">Solution Briefs</span>
+              <h4>Skylight Intent-based Assurance</h4>
+              <div class="serv-link">Read More</div>
+            </div>
+          </div>
+
+          <div class="serv">
+            <div class="serv-img">
+              <img
+                src="../images/codioful-formerly-gradienta-bKESVqfxass-unsplash.jpg"
+                loading="lazy"
+                alt="CEO"
+              />
+            </div>
+            <div class="serv-details">
+              <span class="serv-view-type">Solution Briefs</span>
+              <h4>Skylight Intent-based Assurance</h4>
+              <div class="serv-link">Read More</div>
+            </div>
+          </div>
+
+          <div class="serv">
+            <div class="serv-img">
+              <img
+                src="../images/billy-huynh-W8KTS-mhFUE-unsplash.jpg"
+                loading="lazy"
+                alt="CEO"
+              />
+            </div>
+            <div class="serv-details">
+              <span class="serv-view-type">Solution Briefs</span>
+              <h4>Skylight Intent-based Assurance</h4>
+              <div class="serv-link">Read More</div>
+            </div>
+          </div>
+
+          <div class="serv">
+            <div class="serv-img">
+              <img
+                src="../images/IT-Solutions-HERO-HDR.png"
+                loading="lazy"
+                alt="CEO"
+              />
+            </div>
+            <div class="serv-details">
+              <span class="serv-view-type">Solution Briefs</span>
+              <h4>Skylight Intent-based Assurance</h4>
+              <div class="serv-link">Read More</div>
+            </div>
+          </div>
+
+          <div class="serv">
+            <div class="serv-img">
+              <img src="../images/vision-paul.jpg" loading="lazy" alt="CEO" />
+            </div>
+            <div class="serv-details">
+              <span class="serv-view-type">Solution Briefs</span>
+              <h4>Skylight Intent-based Assurance</h4>
+              <div class="serv-link">Read More</div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
 
     <div class="contact" id="contact">
