completed service page desktop view

--- a/service/index.html
+++ b/service/index.html
@@ -95,7 +95,256 @@
               <img
                 src="../images/aron-visuals-bZZp1PmHI0E-unsplash.jpg"
                 loading="lazy"
+                alt="Skylight"
+              />
+            </div>
+            <div class="serv-details">
+              <span class="serv-view-type">Solution Briefs</span>
+              <h4>Skylight Intent-based Assurance</h4>
+              <div class="serv-link">Read More</div>
+            </div>
+          </div>
+
+          <div class="serv">
+            <div class="serv-img">
+              <img
+                src="../images/codioful-formerly-gradienta-bKESVqfxass-unsplash.jpg"
+                loading="lazy"
                 alt="CEO"
+              />
+            </div>
+            <div class="serv-details">
+              <span class="serv-view-type">Solution Analysis</span>
+              <h4>Skylight Intent-based Assurance</h4>
+              <div class="serv-link">Read more</div>
+            </div>
+          </div>
+
+          <div class="serv">
+            <div class="serv-img">
+              <img
+                src="../images/billy-huynh-W8KTS-mhFUE-unsplash.jpg"
+                loading="lazy"
+                alt="CEO"
+              />
+            </div>
+            <div class="serv-details">
+              <span class="serv-view-type">Alaysis Briefs</span>
+              <h4>Skylight Intent-based Assurance</h4>
+              <div class="serv-link">Read Report</div>
+            </div>
+          </div>
+
+          <div class="serv">
+            <div class="serv-img">
+              <img
+                src="../images/IT-Solutions-HERO-HDR.png"
+                loading="lazy"
+                alt="CEO"
+              />
+            </div>
+            <div class="serv-details">
+              <span class="serv-view-type">Product Analysis</span>
+              <h4>Skylight Intent-based Assurance</h4>
+              <div class="serv-link">Read More</div>
+            </div>
+          </div>
+
+          <div class="serv">
+            <div class="serv-img">
+              <img src="../images/vision-paul.jpg" loading="lazy" alt="CEO" />
+            </div>
+            <div class="serv-details">
+              <span class="serv-view-type">Solution Briefs</span>
+              <h4>Skylight Intent-based Assurance</h4>
+              <div class="serv-link">Read More</div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="service-list" id="embedded-expertise">
+        <h1>Embedded Expertise</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut molestias
+          incidunt, modi ipsa quaerat ea sed magni aspernatur recusandae? Dolor,
+          perspiciatis suscipit! Sit, in consequuntur! Harum dolor nobis ea
+          numquam.
+        </p>
+
+        <div class="sub-services">
+          <div class="serv">
+            <div class="serv-img">
+              <img
+                src="../images/aron-visuals-bZZp1PmHI0E-unsplash.jpg"
+                loading="lazy"
+                alt="Skylight"
+              />
+            </div>
+            <div class="serv-details">
+              <span class="serv-view-type">Solution Briefs</span>
+              <h4>Skylight Intent-based Assurance</h4>
+              <div class="serv-link">Read More</div>
+            </div>
+          </div>
+
+          <div class="serv">
+            <div class="serv-img">
+              <img
+                src="../images/codioful-formerly-gradienta-bKESVqfxass-unsplash.jpg"
+                loading="lazy"
+                alt="CEO"
+              />
+            </div>
+            <div class="serv-details">
+              <span class="serv-view-type">Solution Briefs</span>
+              <h4>Skylight Intent-based Assurance</h4>
+              <div class="serv-link">Read More</div>
+            </div>
+          </div>
+
+          <div class="serv">
+            <div class="serv-img">
+              <img
+                src="../images/billy-huynh-W8KTS-mhFUE-unsplash.jpg"
+                loading="lazy"
+                alt="CEO"
+              />
+            </div>
+            <div class="serv-details">
+              <span class="serv-view-type">Solution Briefs</span>
+              <h4>Skylight Intent-based Assurance</h4>
+              <div class="serv-link">Read More</div>
+            </div>
+          </div>
+
+          <div class="serv">
+            <div class="serv-img">
+              <img
+                src="../images/IT-Solutions-HERO-HDR.png"
+                loading="lazy"
+                alt="CEO"
+              />
+            </div>
+            <div class="serv-details">
+              <span class="serv-view-type">Solution Briefs</span>
+              <h4>Skylight Intent-based Assurance</h4>
+              <div class="serv-link">Read More</div>
+            </div>
+          </div>
+
+          <div class="serv">
+            <div class="serv-img">
+              <img src="../images/vision-paul.jpg" loading="lazy" alt="CEO" />
+            </div>
+            <div class="serv-details">
+              <span class="serv-view-type">Solution Briefs</span>
+              <h4>Skylight Intent-based Assurance</h4>
+              <div class="serv-link">Read More</div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="service-list" id="corporate-training">
+        <h1>Corporate Training</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut molestias
+          incidunt, modi ipsa quaerat ea sed magni aspernatur recusandae? Dolor,
+          perspiciatis suscipit! Sit, in consequuntur! Harum dolor nobis ea
+          numquam.
+        </p>
+
+        <div class="sub-services">
+          <div class="serv">
+            <div class="serv-img">
+              <img
+                src="../images/aron-visuals-bZZp1PmHI0E-unsplash.jpg"
+                loading="lazy"
+                alt="Skylight"
+              />
+            </div>
+            <div class="serv-details">
+              <span class="serv-view-type">Live Seminar</span>
+              <h4>Skylight Intent-based Assurance</h4>
+              <div class="serv-link">Watch Now</div>
+            </div>
+          </div>
+
+          <div class="serv">
+            <div class="serv-img">
+              <img
+                src="../images/codioful-formerly-gradienta-bKESVqfxass-unsplash.jpg"
+                loading="lazy"
+                alt="CEO"
+              />
+            </div>
+            <div class="serv-details">
+              <span class="serv-view-type">Analyst Report</span>
+              <h4>Skylight Intent-based Assurance</h4>
+              <div class="serv-link">Read report</div>
+            </div>
+          </div>
+
+          <div class="serv">
+            <div class="serv-img">
+              <img
+                src="../images/billy-huynh-W8KTS-mhFUE-unsplash.jpg"
+                loading="lazy"
+                alt="CEO"
+              />
+            </div>
+            <div class="serv-details">
+              <span class="serv-view-type">Video</span>
+              <h4>Skylight Intent-based Assurance</h4>
+              <div class="serv-link">Watch Now</div>
+            </div>
+          </div>
+
+          <div class="serv">
+            <div class="serv-img">
+              <img
+                src="../images/IT-Solutions-HERO-HDR.png"
+                loading="lazy"
+                alt="CEO"
+              />
+            </div>
+            <div class="serv-details">
+              <span class="serv-view-type">Twitter Space</span>
+              <h4>Skylight Intent-based Assurance</h4>
+              <div class="serv-link">Listen to record</div>
+            </div>
+          </div>
+
+          <div class="serv">
+            <div class="serv-img">
+              <img src="../images/vision-paul.jpg" loading="lazy" alt="CEO" />
+            </div>
+            <div class="serv-details">
+              <span class="serv-view-type">Solution Briefs</span>
+              <h4>Skylight Intent-based Assurance</h4>
+              <div class="serv-link">Read More</div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="service-list" id="client-experience">
+        <h1>Client Experience</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut molestias
+          incidunt, modi ipsa quaerat ea sed magni aspernatur recusandae? Dolor,
+          perspiciatis suscipit! Sit, in consequuntur! Harum dolor nobis ea
+          numquam.
+        </p>
+
+        <div class="sub-services">
+          <div class="serv">
+            <div class="serv-img">
+              <img
+                src="../images/aron-visuals-bZZp1PmHI0E-unsplash.jpg"
+                loading="lazy"
+                alt="Skylight"
               />
             </div>
             <div class="serv-details">
