added all needed folders

--- a/about/index.html
+++ b/about/index.html
@@ -31,12 +31,15 @@
             <li class="link">Contact</li>
           </a>
         </ul>
-        <button
-          style="--bg-color: var(--black-color)"
-          class="mb-tab-none primary-button"
-        >
-          Search
-        </button>
+        <a href="./search">
+          <button
+            style="--bg-color: var(--black-color)"
+            class="mb-none primary-button"
+          >
+            <img src="../images/search-icon.png" alt="" />
+            Search
+          </button>
+        </a>
         <div class="mobile-menu-icon">
           <img class="icon-white" src="/images/menu-icon-1.svg" alt="icon" />
           <img src="/images/menu-icon-2.svg" alt="icon" class="icon-black" />
@@ -60,9 +63,12 @@
         </a>
       </ul>
       <div class="buttons">
-        <button style="--bg-color: var(--black-color)" class="primary-button">
-          Search
-        </button>
+        <a href="../search">
+          <button style="--bg-color: var(--black-color)" class="primary-button">
+            <img src="../images/search-icon.png" alt="" />
+            Search
+          </button>
+        </a>
       </div>
     </div>
 
