--- a/index.html
+++ b/index.html
@@ -39,12 +39,15 @@
             <li class="link">Contact</li>
           </a>
         </ul>
-        <button
-          style="--bg-color: var(--black-color)"
-          class="mb-none primary-button"
-        >
-          Search
-        </button>
+        <a href="./search">
+          <button
+            style="--bg-color: var(--black-color)"
+            class="mb-none primary-button"
+          >
+            <img src="./images/search-icon.png" alt="" />
+            Search
+          </button>
+        </a>
         <div class="mobile-menu-icon">
           <img class="icon-white" src="/images/menu-icon-1.svg" alt="icon" />
           <img src="/images/menu-icon-2.svg" alt="icon" class="icon-black" />
@@ -56,20 +59,23 @@
         <a href="#">
           <li class="link-mobile active">Home</li>
         </a>
-        <a href="#about">
+        <a href="./about">
           <li class="link-mobile">About</li>
         </a>
-        <a href="#service">
+        <a href="./service">
           <li class="link-mobile">Services</li>
         </a>
-        <a href="#contact">
+        <a href="./contact">
           <li class="link-mobile">Contact</li>
         </a>
       </ul>
       <div class="buttons">
-        <button style="--bg-color: var(--black-color)" class="primary-button">
-          Search
-        </button>
+        <a href="./search">
+          <button style="--bg-color: var(--black-color)" class="primary-button">
+            <img src="./images/search-icon.png" alt="" />
+            Search
+          </button>
+        </a>
       </div>
     </div>
 
