added all needed folders

--- a/faq/index.html
+++ b/faq/index.html
@@ -25,7 +25,7 @@
             <li class="link">About</li>
           </a>
           <a href="/">
-            <li class="link active">Services</li>
+            <li class="link">Services</li>
           </a>
           <a href="#contact">
             <li class="link">Contact</li>
@@ -36,7 +36,7 @@
             style="--bg-color: var(--black-color)"
             class="mb-none primary-button"
           >
-            <img src="./images/search-icon.png" alt="" />
+            <img src="../images/search-icon.png" alt="" />
             Search
           </button>
         </a>
@@ -66,16 +66,17 @@
             style="--bg-color: var(--black-color)"
             class="primary-button"
           >
-            <img src="./images/search-icon.png" alt="" />
+            <img src="/images/search-icon.png" alt="" />
             Search
           </button>
         </a>
         </button>
-      </div>
     </div>
 
     <section class="main-cta">
     </section>
+
+    <h1 class="linear-gradient-text">Frequently Asked Questions.</h1>
 
     <div class="contact" id="contact">
       <div class="form-container">
