--- a/search/index.html
+++ b/search/index.html
@@ -25,7 +25,7 @@
             <li class="link">About</li>
           </a>
           <a href="/">
-            <li class="link active">Services</li>
+            <li class="link">Services</li>
           </a>
           <a href="#contact">
             <li class="link">Contact</li>
@@ -36,13 +36,13 @@
             style="--bg-color: var(--black-color)"
             class="mb-none primary-button"
           >
-            <img src="./images/search-icon.png" alt="" />
+            <img src="../images/search-icon.png" alt="" />
             Search
           </button>
         </a>
         <div class="mobile-menu-icon">
-          <img class="icon-white" src="/images/menu-icon-1.svg" alt="icon" />
-          <img src="/images/menu-icon-2.svg" alt="icon" class="icon-black" />
+          <img class="icon-white" src="../images/menu-icon-1.svg" alt="icon" />
+          <img src="../images/menu-icon-2.svg" alt="icon" class="icon-black" />
         </div>
       </nav>
     </header>
@@ -76,7 +76,7 @@
     <section class="main-cta">
     </section>
 
-    <h1 class="linear-gradient-color">Search</h1>
+    <h1 class="linear-gradient-text">Search</h1>
 
 
     <footer>
